--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -24,6 +24,7 @@ body{
         "navigation" auto
         "meta" auto
         "page" auto
+        "static" auto
         / auto;
         width:100%;
         max-width: 900px;
@@ -31,12 +32,14 @@ body{
             grid-template:
         "navigation navigation" auto
         "page meta" auto
+        "page static" auto
         / 2fr 1fr;
         max-width: 1100px;
         }
         @media print{
             grid-template:
-            "page meta" auto
+            "meta meta" auto
+            "page static" auto
             / 2fr 1fr;
         }
         margin:0 auto;
@@ -68,13 +71,43 @@ body{
                 grid-area: langs;
             }
         }
+        >section#static {
+            grid-area: static;
+            background-color:$bgSection;
+            padding:1rem;
+            > h2 {
+                font-size: 1.15rem;
+                font-weight: bold;
+                margin-bottom:0.5rem;
+                color: $mildHL;
+                @media screen and (min-width:900px){
+                    border-bottom:1px solid $lines;
+                    padding-bottom:0.5rem;
+                }
+            }
+            > p {
+                margin:0.5rem 0;
+                > span {
+                    display:inline-block
+                }
+                > span + span {
+                    margin-left:0.5rem;
+                }
+            }
+            > ul {
+                margin-bottom: 0.5rem;
+            }
+        }
         > section#meta {
             padding:1rem;
             background-color:$bgSection;
             grid-area: meta;
             text-align: center;
             @media screen and (min-width:900px){
-                text-align: right;
+                text-align: left;
+            }
+            @media print{
+                text-align: left;
             }
             >h1 {
                 font-size: 1.15rem;
@@ -97,6 +130,16 @@ body{
             }
             > ul {
                 margin-bottom: 0.5rem;
+            }
+            > h2 {
+                font-size: 1.15rem;
+                font-weight: bold;
+                margin-bottom:0.5rem;
+                color: $mildHL;
+                @media screen and (min-width:900px){
+                    border-bottom:1px solid $lines;
+                    padding-bottom:0.5rem;
+                }
             }
         }
         > section#page {
