--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,16 +1,15 @@
 @import './reset.scss';
+@import './variables.scss';
 
-    $link: var(--link);
-    $mildHL: var(--mildHL);
-    $color: var(--color);
-//    $bgColor : #505050;
-    $bgColor:var(--bgColor);
-    $bgSection: var(--bgSection);
-    $lines:var(--lines);
 a {
     color:$link;
     font-weight: bold;
     text-decoration: none;
+    @media print{
+        &:after{
+            content: " (" attr(href) ")";
+        }
+    }
 }
 
 body{
@@ -26,6 +25,7 @@ body{
         "meta" auto
         "page" auto
         "static" auto
+        "theme" auto
         / auto;
         width:100%;
         max-width: 900px;
@@ -34,6 +34,7 @@ body{
         "navigation navigation" auto
         "page meta" auto
         "page static" auto
+        "page theme" auto
         / 2fr 1fr;
         max-width: 1100px;
         }
@@ -45,6 +46,11 @@ body{
         }
         margin:0 auto;
         grid-gap: 0.5rem;
+        > * {
+            background-color:$bgSection;
+            padding:1rem;
+            
+        }
         > header#header {
             padding:1rem;
             grid-area: navigation;
@@ -133,6 +139,7 @@ body{
             > h2 {
                 display:none;
                 @media screen and (min-width:900px){ 
+                    display:block;
                     font-size: 1.15rem;
                     font-weight: bold;
                     margin-bottom:0.5rem;
@@ -185,7 +192,7 @@ body{
                         grid-area: title;
                         color:$mildHL;
                     }
-                    > p.desc {
+                    > .desc {
                         grid-area:description
                     }
                     > p.location {
@@ -193,6 +200,12 @@ body{
                         align-self: center;
                     }
                 }
+            }
+        }
+        >section#theme{
+            grid-area:theme;
+            @media print{
+                display:none;
             }
         }
     }
